# mustikas_alignment

./: CMakeLists.txt  README.md  package.xml
launch/: camera_on_robot_gazebo.launch  camera_on_robot_real.launch  detect_and_align.launch  lite_realsense_on_ground.launch  multi_mustikas_realsense_on_ground_gazebo.launch  realsense_on_arm.launch  realsense_on_ground.launch  xarm6_beside_table.launch
msg/: ROIs.msg
src/: 2coordinate_translator.cpp  2detection_node.cpp  2location_node.cpp  2location_node_calc.cpp  2xarm_control_node2.cpp  absolute_move.cpp  absolute_move_cartesian.cpp  absolute_move_server.cpp  backup_2location_node.cpp  commander_node.cpp  coordinate_translator.cpp  detection_node.cpp  location_node.cpp  location_node_calc.cpp  ready_move_server.cpp  stop.cpp  xarm_control_node.cpp  xarm_control_node2.cpp
worlds/: plant_picture
